cpu mode and display customizations, notes with error fixes

--- a/argument.yml
+++ b/argument.yml
@@ -18,8 +18,8 @@ video_folder: video
 load_ply: False
 save_ply: True
 inference_video: True
-gpu_ids: 0
-offscreen_rendering: False
+gpu_ids: -1 
+offscreen_rendering: True
 img_format: '.jpg'
 depth_format: '.npy'
 require_midas: True
